--- a/css/style.css
+++ b/css/style.css
@@ -350,7 +350,7 @@ text-align: right;
   display: flex;
 }
 
-.oreder-wrap {
+.order-wrap {
   display: flex;
   align-items: center;
   width: 226px;
