--- a/css/style.css
+++ b/css/style.css
@@ -70,10 +70,6 @@ a {
   color: #766357;
 }
 
-.info-current a:active {
-  color: #766357;
-}
-
 .header-navigation li {
   width: 25%;
 }
@@ -390,17 +386,27 @@ transform: translate(-50%, -50%);
 background-color: #a9a9a9;
 }
 
+.order-button-edit:hover::before:,
+.order-button-edit:hover::after {
+  fill: #000000;
+}
+
+.order-button-edit:focus::before:,
+.order-button-edit:focus::after {
+  fill: #81b3d2;
+}
+
 .order-button-edit-plus::after {
-    transform: translate(-50%, -50%) rotate(90deg);
+  transform: translate(-50%, -50%) rotate(90deg);
 }
 
-/*.order-button-edit:hover {
-  color: #000000;
+.order-button-edit-plus:hover::after {
+  fill: #000000;
 }
 
-.order-button-edit:focus {
-  color: #81b3d2;
-}*/
+.order-button-edit-plus:focus::after {
+  fill: #81b3d2;
+}
 
 .order-count-value {
   border: none;
@@ -673,6 +679,14 @@ background-color: #a9a9a9;
   text-decoration-style: dotted;
 }
 
+.sort-item-dotted a:hover {
+  color: #81b3d2;
+}
+
+.sort-item-dotted a:focus {
+  color: #000;
+ }
+
 .item-icon {
   margin-left: auto;
   width: 37px;
@@ -684,6 +698,14 @@ background-color: #a9a9a9;
 }
 
 .sort-item-icon-1:hover svg {
+  fill: #000;
+}
+
+.sort-item-icon-1:focus svg {
+  fill: #81b3d2;
+}
+
+.sort-item-icon-1:active svg {
   fill: #81b3d2;
 }
 
@@ -692,6 +714,14 @@ background-color: #a9a9a9;
 }
 
 .sort-item-icon-2:hover svg {
+  fill: #000;
+}
+
+.sort-item-icon-2:focus svg {
+  fill: #81b3d2;
+}
+
+.sort-item-icon-2 .current:active svg {
   fill: #81b3d2;
 }
 
