--- a/css/style.css
+++ b/css/style.css
@@ -100,8 +100,8 @@ text-align: right;
   position: absolute;
   width: 100%;
   height: 57px;
-  left: 0px;
-  bottom: 0px;
+  left: 0;
+  bottom: 0;
   background: url("../img/intro-mask.svg") no-repeat;
 }
 
