--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,6 @@ a {
 
 .header-navigation {
   display: flex;
-  justify-content: space-between;
   margin: 0;
   padding: 0;
   list-style: none;
@@ -48,7 +47,7 @@ a {
 .header-navigation a {
   display: block;
   color: #000;
-  padding: 18px 0;
+  padding: 16px 0;
 }
 
 .header-navigation a:hover {
@@ -88,7 +87,7 @@ text-align: right;
   background: #dceaf3 url(../img/background-photo.jpg) no-repeat 0px -52px;
   margin-bottom: 18px;
   padding-top: 90px;
-  padding-bottom: 80px;
+  padding-bottom: 79px;
 }
 
 .main-title img {
@@ -558,10 +557,6 @@ background-color: #a9a9a9;
   width: 156;
 }
 
-.filter-item input[type="checkbox"] {
-  display: none;
-}
-
 .filter-form legend {
   font-weight: 700;
 }
@@ -604,7 +599,6 @@ background-color: #a9a9a9;
 }
 
 .filter-item {
-  position: relative;
   margin-bottom: 10px;
   margin-left: 0;
   margin-right: 0;
@@ -615,17 +609,39 @@ background-color: #a9a9a9;
   margin-bottom: 0;
 }
 
-.filter-item label::before {
+.filter-item label {
+  position: relative;
+  cursor: pointer;
+  display: block;
+}
+
+.filter-input-checkbox + label::before {
   content: "";
   position: absolute;
   top: 2px;
-  left: 0;
+  left: -46px;
   width: 25px;
   height: 25px;
-  border: 2px solid #fff;
-  background-color: transparent;
-  border-radius: 10%;
   cursor: pointer;
+}
+
+/*.filter-input-checkbox:disabled + label::before {
+  color: #6a6a6a;}*/
+
+input:checked + label::before {
+  background-image: url("../img/checkbox-on.svg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+}
+
+input:not(:checked) + label::before {
+  background-image: url("../img/checkbox-off.svg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+}
+
+.filter-item input[type="checkbox"] {
+  display: none;
 }
 
 .filter-column-1 {
@@ -648,11 +664,15 @@ background-color: #a9a9a9;
 
 .filter-title {
   text-align: center;
-  margin-bottom: 9px;
+  margin-bottom: 28px;
   font-weight: bold;
   font-size: 16px;
   line-height: 21px;
   color: #fff;
+}
+
+.column-3 {
+  margin-bottom: 9px;
 }
 
 .filter-form ul {
