--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: PT Sans, Arial, sans-serif;
-	font-size: 14px;
+  font-size: 14px;
   line-height: 1.5;
   font-weight: 400;
   color: #000;
@@ -8,17 +8,22 @@ body {
   background-color: #f2f2f2;
 }
 
+img {
+  max-width: 100%;
+  height: auto;
+}
+
 .wrapper {
   width: 1200px;
   margin: 0 auto;
 }
+
 .wrapper-header-color {
-  background-color: #fff;}
+  background-color: #fff;
+}
 
 .main-navigation {
   position: relative;
-  margin-left: 73px;
-  margin-right: 73px;
 }
 
 a {
@@ -38,6 +43,7 @@ a {
 
 .header-navigation {
   display: flex;
+  flex-wrap: wrap;
   margin: 0;
   padding: 0;
   list-style: none;
@@ -70,11 +76,30 @@ a {
 
 .header-navigation li {
   width: 25%;
+  box-sizing: border-box;
 }
 
-.header-navigation li:nth-child(3),
-.header-navigation li:nth-child(4) {
-text-align: right;
+.header-navigation li:nth-child(3n),
+.header-navigation li:nth-child(3n+1) {
+  text-align: right;
+}
+
+.header-navigation li:nth-child(2) {
+  padding-left: 12px;
+}
+
+.header-navigation li:nth-child(3) {
+  padding-right: 16px;
+}
+
+.header-navigation li:first-child,
+.header-navigation li:nth-child(5n) {
+  padding-left: 73px;
+  text-align: left;
+}
+
+.header-navigation li:nth-child(4n) {
+  padding-right: 73px;
 }
 
 .main-navigation-wrapper .container {
@@ -84,9 +109,9 @@ text-align: right;
 
 .main-title {
   position: relative;
-  background: #dceaf3 url(../img/background-photo.jpg) no-repeat 0px -52px;
-  margin-bottom: 18px;
-  padding-top: 90px;
+  background: #dceaf3 url(../img/background-photo.jpg) no-repeat 0px -68px;
+  margin-bottom: 10px;
+  padding-top: 76px;
   padding-bottom: 79px;
 }
 
@@ -121,8 +146,8 @@ text-align: right;
   line-height: 26px;
   font-weight: 400;
   font-size: 14px;
-  margin-bottom: 58px;
-  margin-top: 35px;
+  margin-bottom: 50px;
+  margin-top: 27px;
   cursor: default;
 }
 
@@ -140,7 +165,7 @@ text-align: right;
   background-color: #81b3d2;
   color: #fff;
   text-align: center;
-  padding-top: 40px;
+  padding-top: 48px;
   padding-bottom: 40px;
   cursor: default;
 }
@@ -156,19 +181,27 @@ text-align: right;
   cursor: default;
 }
 
-.reason-content-item-title{
+.reason-item-number-blue {
+  margin-top: 23px;
+  margin-bottom: 21px;
+}
+
+.reason-content-item-title {
   text-align: center;
   font-size: 21px;
   line-height: 21px;
   margin: 0;
-  margin-bottom: 30px;
+  margin-bottom: 23px;
   cursor: default;
+  width: 150px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .reason-item-number {
   display: block;
   margin: 0;
-  margin-bottom: 25px;
+  margin-bottom: 22px;
   cursor: default;
 }
 
@@ -201,8 +234,8 @@ text-align: right;
   background-color: #fff;
   text-align: center;
   width: 400px;
-  padding-top: 63px;
-  padding-bottom: 88px;
+  padding-top: 57px;
+  padding-bottom: 82px;
   cursor: default;
 }
 
@@ -223,7 +256,7 @@ text-align: right;
   line-height: 21px;
   font-weight: 700;
   margin-top: 30px;
-  margin-bottom: 30px;
+  margin-bottom: 23px;
   display: inline-block;
   vertical-align: middle;
 }
@@ -238,13 +271,12 @@ text-align: right;
   color: #000;
   text-align: center;
   width: 400px;
-  padding-top: 50px;
-  padding-bottom: 65px;
+  padding-top: 48px;
+  padding-bottom: 38px;
 }
 
 .order-question {
   width: 1200px;
-  padding-top: 58px;
 }
 
 .order-question-title {
@@ -252,9 +284,9 @@ text-align: right;
   line-height: 36px;
   font-weight: 700;
   text-align: center;
-  margin-bottom: 38px;
+  margin-bottom: 23px;
   margin-top: 0;
-  padding-top: 57px;
+  padding-top: 52px;
   cursor: default;
 }
 
@@ -263,7 +295,7 @@ text-align: right;
   line-height: 24px;
   font-weight: 400;
   text-align: center;
-  margin-bottom: 55px;
+  margin-bottom: 46px;
   cursor: default;
 }
 
@@ -338,6 +370,7 @@ text-align: right;
   padding-bottom: 6px;
   text-transform: uppercase;
   margin-left: auto;
+  padding-left: 12px;
 }
 
 .order-text:hover {
@@ -392,8 +425,8 @@ text-align: right;
   border: none;
   outline: none;
   width: 38px;
-  padding-top: 6px;
-  padding-bottom: 6px;
+  padding-top: 20px;
+  padding-bottom: 20px;
   position: relative;
   background-color: #f2f2f2;
   cursor: pointer;
@@ -401,14 +434,14 @@ text-align: right;
 
 .order-button-edit::before,
 .order-button-edit::after {
-content: '';
-width: 12px;
-height: 3px;
-position: absolute;
-left: 50%;
-top: 50%;
-transform: translate(-50%, -50%);
-background-color: #a9a9a9;
+  content: "";
+  width: 12px;
+  height: 3px;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #a9a9a9;
 }
 
 .order-button-edit:hover::before,
@@ -440,6 +473,7 @@ background-color: #a9a9a9;
   width: 38px;
   padding-top: 6px;
   padding-bottom: 6px;
+  font-weight: 700;
 }
 
 .order-button {
@@ -452,9 +486,9 @@ background-color: #a9a9a9;
   display: block;
   width: 100%;
   margin-top: 54px;
-  padding: 15px 0;
-  font-weight: 700px;
+  padding: 16px 0;
   cursor: pointer;
+  font-weight: 700;
 }
 
 .order-button:hover {
@@ -470,7 +504,7 @@ background-color: #a9a9a9;
 .main-footer .wrapper {
   display: flex;
   align-items: center;
-  padding-top: 36px;
+  padding-top: 15px;
   padding-bottom: 32px;
   padding-left: 123px;
   padding-right: 101px;
@@ -513,7 +547,7 @@ background-color: #a9a9a9;
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 48px;
+  width: 46px;
   height: 48px;
   background-color: #81b3d2;
 }
@@ -530,9 +564,14 @@ background-color: #a9a9a9;
   fill: #88b6d1;
 }
 
+.footer-copyright {
+  margin-left: 49px;
+}
+
 .footer-logo {
   display: inline-block;
   vertical-align: middle;
+  margin-left: 4px;
 }
 
 .footer-logo:hover svg {
@@ -543,7 +582,7 @@ background-color: #a9a9a9;
   fill: #bdbbbc;
 }
 
-/* Стили каталога*/
+/* Ð¡Ñ‚Ð¸Ð»Ð¸ ÐºÐ°Ñ‚Ð°Ð»Ð¾Ð³Ð°*/
 .filter-columns {
   display: flex;
   justify-content: space-between;
@@ -663,12 +702,12 @@ input:not(:checked) + label::before {
 }
 
 .filter-title {
-  text-align: center;
+
   margin-bottom: 28px;
   font-weight: bold;
   font-size: 16px;
   line-height: 21px;
-  color: #fff;
+  color: #fff;display: block;
 }
 
 .column-3 {
@@ -944,9 +983,9 @@ input:not(:checked) + label::before {
   font-size: 21px;
   line-height: 26px;
   font-weight: 700;
-  padding-bottom: 17px;
+  padding-bottom: 6px;
   margin: 0;
-  margin-bottom: 6px;
+  /* margin-bottom: 6px; */
   width: 100%;
   cursor: pointer;
 }
