--- a/css/style.css
+++ b/css/style.css
@@ -217,6 +217,10 @@ a {
   cursor: default;
 }
 
+.widht-text-gray {
+  max-width: 64%;
+}
+
 .reasons-content-list {
   display: flex;
   list-style: none;
@@ -349,6 +353,7 @@ a {
 
 .order-title {
   font-weight: 700;
+  padding-left: 1px;
 }
 
 .order-text {
@@ -381,6 +386,8 @@ a {
   transform: translate(0, -50%);
   right: 9px;
   cursor: pointer;
+  border: none;
+  padding: 0;
 }
 
 .order-button-calendar svg {
@@ -505,6 +512,11 @@ a {
   box-sizing: border-box;
 }
 
+.footer-contacts {
+  padding-top: 7px;
+  padding-left: 6px;
+}
+
 .footer-text {
   margin: 0;
   font-size: 21px;
@@ -522,7 +534,14 @@ a {
   list-style: none;
   padding: 0;
   margin: 0 auto;
+  padding-top: 9px;
+  padding-right: 6px;
 }
+/*
+.footer-social .index {
+  padding-top: 2px;
+  padding-right: 6px;
+}*/
 
 .footer-social li {
   margin-right: 6px;
@@ -562,10 +581,16 @@ a {
   margin-left: 49px;
 }
 
+.footer-copyright-catalog {
+  margin-left: 49px;
+  padding-top: 10px;
+}
+
 .footer-logo {
   display: inline-block;
   vertical-align: middle;
   margin-left: 4px;
+  padding-left: 20px;
 }
 
 .footer-logo:hover svg {
@@ -576,14 +601,13 @@ a {
   fill: #bdbbbc;
 }
 
-/* Ð¡Ñ‚Ð¸Ð»Ð¸ ÐºÐ°Ñ‚Ð°Ð»Ð¾Ð³Ð°*/
 .filter-columns {
   display: flex;
   justify-content: space-between;
-  padding-left: 73px;
+  padding-left: 61px;
   padding-right: 73px;
   padding-top: 32px;
-  padding-bottom: 31px;
+  padding-bottom: 5px;
 }
 
 .filter-column1 {
@@ -616,6 +640,7 @@ a {
 .filter-form fieldset {
   border: none;
   margin: 0;
+  margin-top: -3px;
 }
 
 .filter-form legend {
@@ -632,20 +657,31 @@ a {
 }
 
 .filter-item {
-  margin-bottom: 10px;
-  margin-left: 0;
-  margin-right: 0;
-  padding-left: 40px;
+  margin-bottom: 13px;
+  margin-left: 0px;
+  margin-right: 0px;
+  padding-left: 46px;
+  padding-right: -5px;
+}
+
+.filter-item:nth-child(4),
+.filter-item:nth-child(5),
+.filter-item:nth-child(6), {
+  top: 3px;
+ left: -51px;
 }
 
 .filter-item :last-child{
-  margin-bottom: 0;
+  /* margin-bottom: 2px; */
+  padding-top: -16px;
 }
 
 .filter-item label {
+  padding-top: -12px;
   position: relative;
   cursor: pointer;
   display: block;
+  margin-top: -2px;
 }
 
 .filter-input-checkbox + label::before {
@@ -665,6 +701,8 @@ input:checked + label::before {
   background-image: url("../img/checkbox-on.svg");
   background-repeat: no-repeat;
   background-position: 0 0;
+  /* padding-right: 0px; */
+  /* margin-right: -1px; */
 }
 
 input:not(:checked) + label::before {
@@ -680,6 +718,8 @@ input:not(:checked) + label::before {
 .filter-column-1 {
   flex-basis: 25%;
   align-items: flex-start;
+  padding-left: -2px;
+  padding-right: -20px;
 }
 
 .filter-column-2 {
@@ -696,16 +736,30 @@ input:not(:checked) + label::before {
 }
 
 .filter-title {
-  
-  margin-bottom: 28px;
+  margin-bottom: 23px;
+  margin-top: -11px;
   font-weight: bold;
   font-size: 16px;
-  line-height: 21px;
-  color: #fff;display: block;
+  line-height: 22px;
+  color: #fff;
+  display: block;
+}
+
+.filter-title .column2 {
+  margin-top: -11px;
+}
+
+.filter-item :last-child {
+    padding-bottom: 3px;
+  }
+
+.filter-title:nth-child(2) {
+  padding-left: 10px;
 }
 
 .column-3 {
-  margin-bottom: 9px;
+  margin-bottom: 10px;
+  margin-left: 26px;
 }
 
 .filter-form ul {
@@ -717,7 +771,9 @@ input:not(:checked) + label::before {
 
 .filter-price {
   position: relative;
-  height: 36px;
+  left: 22px;
+  height: 33px;
+  width: 96%;
   font-size: 0;
   margin-bottom: 20px;
   border: 2px solid #fff;
@@ -738,15 +794,15 @@ input:not(:checked) + label::before {
 .filter-price label {
   display: inline-block;
   font-size: 14px;
-  line-height: 38px;
+  line-height: 35px;
   vertical-align: top;
   cursor: pointer;
 }
 
 .filter-price .min-price,
 .filter-price .max-price {
-  width: 90px;
-  padding-left: 65px;
+  width: 82px;
+  padding-left: 66px;
 }
 
 .filter-price input {
@@ -765,13 +821,17 @@ input:not(:checked) + label::before {
 
 .filter-range .scale {
   height: 2px;
+  width: 97%;
   background: rgba(255, 255, 255, 0.3);
+  margin-left: 7px;
+  margin-left: 20px;
 }
 
 .filter-range .bar {
-  width: 80%;
+  width: 79%;
   height: 2px;
   background: #fff;
+  margin-left: 24px;
 }
 
 .range-toggle {
@@ -791,17 +851,20 @@ input:not(:checked) + label::before {
 }
 
 .range-toggle-min {
-  left: 0;
+  left: 7%;
 }
 
 .range-toggle-max {
-  left: 80%;
+  left: 84%;
 }
 
 .filter-button {
   display: block;
-  margin: 0 auto;
-  padding: 6px 35px;
+  margin: 0 107px;
+  padding-left: 35px;
+  padding-right: 35px;
+  padding-top: 7px;
+  padding-bottom: 6px;
   font-size: 14px;
   line-height: 20px;
   color: #ffffff;
@@ -823,6 +886,7 @@ input:not(:checked) + label::before {
   border-bottom: 1px solid #e5e5e5;
   padding-left: 73px;
   padding-right: 73px;
+  padding-bottom: 8px;
 }
 
  .result-count {
@@ -832,13 +896,18 @@ input:not(:checked) + label::before {
   text-align: left;
   flex-basis: 165px;
   cursor: default;
+  padding-top: 8px;
+  margin-right: -1px;
+  margin-left: -2px;
 }
 
 .result-sort {
   flex-basis: 115px;
+  padding-top: 10px;
   font-size: 12px;
   line-height: 18px;
   cursor: default;
+  padding-bottom: -21px;
 }
 
 .sort-list {
@@ -848,7 +917,7 @@ input:not(:checked) + label::before {
   list-style: none;
   font-size: 12px;
   padding: 0;
-  margin: 0;
+  margin-bottom: 0px;
 }
 
 .sort-item-current {
@@ -874,6 +943,8 @@ input:not(:checked) + label::before {
 .item-icon {
   margin-left: auto;
   width: 37px;
+  margin-right: -2px;
+  margin-bottom: -10px;
 }
 
 .sort-item-icon-1 svg {
@@ -912,24 +983,29 @@ input:not(:checked) + label::before {
 .icon-box {
   display: block;
   width: 100%;
-  height: 17px;
+  height: 18px;
+  /* width: 100%; */
   background-image: url(../img/star.svg);
   background-repeat: repeat-x;
   background-position: right center;
-  margin-left: auto;
-  margin-bottom: 47px;
+  margin-left: 20px;
+  margin-bottom: 40px;
+  /* margin-right: 4px; */
 }
 
 .icon-box-4star {
-  width: 94px;
+  width: 97px;
+  margin-left: 20px;
 }
 
 .icon-box-3star {
   width: 70px;
+  margin-left: 48px;
 }
 
 .icon-box-2star {
   width: 45px;
+  margin-left: 73px;
 }
 
 .visually-hidden {
@@ -945,8 +1021,8 @@ input:not(:checked) + label::before {
 .wrapper-catalog {
   display: flex;
   align-items: center;
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding-top: 9px;
+  padding-bottom: 9px;
 }
 
 .catalog-item-block1 a,
@@ -954,7 +1030,7 @@ input:not(:checked) + label::before {
   list-style: none;
   border-bottom: 1px solid #e5e5e5;
   padding-left: 72px;
-  padding-right: 73px;
+  padding-right: 72px;
 }
 
 .catalog-item-block1 {
@@ -977,11 +1053,12 @@ input:not(:checked) + label::before {
   font-size: 21px;
   line-height: 26px;
   font-weight: 700;
-  padding-bottom: 6px;
+  padding-bottom: 8px;
   margin: 0;
-  /* margin-bottom: 6px; */
   width: 100%;
   cursor: pointer;
+  margin-left: 3px;
+  margin-bottom: 0;
 }
 
 .catalog-item-title:hover {
@@ -994,24 +1071,33 @@ input:not(:checked) + label::before {
 
 .catalog-category {
   color: #333333;
-  margin-right: 6px;
-  margin-bottom: 10px;
+  margin-right: 9px;
+  padding-left: 2px;
+  padding-bottom: 11px;
   width: 110px;
 }
 
 .catalog-item-price {
+  margin-left: -3px;
   color: #333333;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
+  padding-left: -15px;
+  padding-right: 15px;
+  padding-bottom: 2px;
 }
 
 .catalog-item-button-detail {
   border: none;
   color: #ffffff;
   background-color: #81b3d2;
-  padding: 6px 17px;
+  /*padding: 6px 20px;*/
+  padding-left: 20px;
+  padding-top: 5px;
   width: 110px;
   box-sizing: border-box;
-  margin-right: 6px;
+  margin-right: 9px;
+  /* margin-bottom: 0px; */
+  /* padding-bottom: 0px; */
 }
 
 .catalog-item-button-detail:hover {
@@ -1057,13 +1143,14 @@ input:not(:checked) + label::before {
   color: #666;
   padding-left: 16px;
   padding-right: 13px;
-  padding-top: 6px;
-  padding-bottom: 6px;
+  padding-top: 4px;
+  padding-bottom: 4px;
   cursor: default;
+  margin-right: 0px;
+  margin-top: 46px;
 }
 
 .catalog-item-rating {
   display: inline-block;
   vertical-align: middle;
 }
-
