--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,10 @@ body {
   background-color: #f2f2f2;
 }
 
+a {
+  text-decoration: none;
+}
+
 .wrapper {
   width: 1200px;
   margin: 0 auto;
@@ -28,10 +32,6 @@ body {
 
 .main-navigation {
   position: relative;
-}
-
-a {
-  text-decoration: none;
 }
 
 .main-header-logo {
@@ -56,7 +56,7 @@ a {
 .header-navigation a {
   display: block;
   color: #000;
-  padding: 16px 0;
+  padding: 18px 0;
 }
 
 .header-navigation a:hover {
@@ -69,12 +69,7 @@ a {
 
 .info-current a {
   color: #766357;
-  padding: 18px 0;
   cursor: pointer;
-}
-
-.info-current a:hover {
-  color: #766357;
 }
 
 .header-navigation li {
@@ -401,6 +396,7 @@ a {
   cursor: pointer;
   border: none;
   padding: 0;
+  background: none;
 }
 
 .order-button-calendar svg {
@@ -522,11 +518,21 @@ a {
   padding-right: 101px;
   box-sizing: border-box;
   padding-top: 22px;
-  padding-left: 130px;
+  padding-left: 124px;
 }
 
 .main-footer {
   padding-left: 0px;
+}
+
+.main-footer-index {
+  margin-top: -120px;
+  position: relative;
+  z-index: 1;
+}
+
+.main-footer-index .wrapper {
+  background-color: rgba(254, 254, 254, 0.9);
 }
 
 .wrapper .footer-social {
@@ -604,10 +610,9 @@ a {
 
 .filter-columns {
   display: flex;
-  justify-content: space-between;
   padding-left: 70px;
-  padding-right: 73px;
-  padding-top: 23px;
+  padding-right: 70px;
+  padding-top: 26px;
   padding-bottom: 13px
 }
 
@@ -624,12 +629,12 @@ a {
 }
 
 .filter-column3 {
-  width: 328px;
+  width: 316px;
   text-align: center;
 }
 
 .box-filter {
-  background: #dceaf3 url("../img/filter-background.jpg") no-repeat center;
+  background: #dceaf3 url("../img/filter-background.jpg") no-repeat center -55px;
 }
 
 .fieldset {
@@ -679,21 +684,24 @@ a {
   width: 25px;
   height: 25px;
   cursor: pointer;
-}
-
-input:checked + label::before {
-  background-image: url("../img/checkbox-on.svg");
-  background-repeat: no-repeat;
-  background-position: 0 0;
-}
-
-input:not(:checked) + label::before {
   background-image: url("../img/checkbox-off.svg");
   background-repeat: no-repeat;
   background-position: 0 0;
 }
 
-.filter-item input[type="checkbox"] {
+.filter-input-checkbox:checked + label::before {
+  background-image: url("../img/checkbox-on.svg");
+}
+
+.filter-input-checkbox:disabled + label::before {
+  background-image: url("../img/checkbox-off-disabled.svg");
+}
+
+.filter-input-checkbox:disabled:checked + label::before {
+    background-image: url("../img/checkbox-on-disabled.svg");
+}
+
+.filter-input-checkbox {
   display: none;
 }
 
@@ -704,7 +712,7 @@ input:not(:checked) + label::before {
 
 .filter-column-2 {
   flex-basis: 120px;
-  margin-right: 339px;
+  margin-right: auto;
 }
 
 .filter-column-3 {
@@ -724,7 +732,7 @@ input:not(:checked) + label::before {
 }
 
 .column-3 {
-  margin-bottom: 9px;
+  margin-bottom: 7px;
 }
 
 .filter-form ul {
@@ -814,7 +822,7 @@ input:not(:checked) + label::before {
 }
 
 .range-toggle-max {
-  left: 254px;
+  left: 252px;
 }
 
 .filter-button {
