--- a/css/style.css
+++ b/css/style.css
@@ -340,15 +340,65 @@ a {
   display: block;
 }
 
+@keyframes bounce {
+  0% {
+    transform: translateY(-2000px);
+  }
+
+  70% {
+    transform: translateY(30px);
+  }
+
+  90% {
+    transform: translateY(-10px);
+  }
+
+  100% {
+    transform: translateY(0);
+  }
+}
+
+@keyframes shake {
+  0%,
+  100% {
+    transform: translateX(0);
+  }
+
+  10%,
+  30%,
+  50%,
+  70%,
+  90% {
+    transform: translateX(-10px);
+  }
+
+  20%,
+  40%,
+  60%,
+  80% {
+    transform: translateX(10px);
+  }
+}
+
 .form-container {
   width: 568px;
   padding: 55px;
   box-sizing: border-box;
   position: absolute;
+  display: none;
   top: 0;
   left: 50%;
   transform: translate(-50%, 0);
   background-color: #fff;
+}
+
+.form-show {
+  display: block;
+  animation: bounce 0.6s;
+}
+
+.form-error {
+  animation: shake 0.6s;
 }
 
 .order-date {
