--- a/css/style.css
+++ b/css/style.css
@@ -340,28 +340,24 @@ a {
   display: block;
 }
 
+.field-error {
+ border: 1px solid red;
+}
+
 @keyframes bounce {
   0% {
-    transform: translateY(0px);
-  }
-
-  70% {
-    transform: translateY(30px);
-  }
-
-  90% {
-    transform: translateY(-10px);
+    opacity: 0;
   }
 
   100% {
-    transform: translateY(0);
+    opacity: 1;
   }
 }
 
 @keyframes shake {
   0%,
   100% {
-    transform: translateX(0px);
+    margin-left(10px);
   }
 
   10%,
@@ -436,6 +432,10 @@ a {
 
 .order-text:focus {
   background-color: #ffffff;
+}
+
+.order-date input {
+  border: 1px solid transparent;
 }
 
 .order-button-calendar {
@@ -687,13 +687,7 @@ a {
   background: #dceaf3 url("../img/filter-background.jpg") no-repeat center -55px;
 }
 
-.fieldset {
-  border: none;
-  margin: 0;
-  padding: 0;
-}
-
-.filter-form fieldset {
+.filter-form {
   border: none;
   margin: 0;
   padding: 0px;
