--- a/css/style.css
+++ b/css/style.css
@@ -334,10 +334,31 @@ a {
 
 .order-container {
   position:relative;
+  z-index: 2;
+}
+
+.order-container p {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  margin: 0;
+
 }
 
 .order-image{
   display: block;
+}
+
+.map iframe {
+  position: relative;
+  /*top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  margin: 0;*/
+  z-index: 2;
+  border: none;
 }
 
 .form-image {
@@ -386,6 +407,7 @@ a {
   left: 50%;
   margin-left: -284px;
   background-color: #fff;
+  z-index: 2;
 }
 
 .form-show {
@@ -595,7 +617,7 @@ a {
 .main-footer-index {
   margin-top: -120px;
   position: relative;
-  z-index: 1;
+  z-index: 3;
 }
 
 .main-footer-index .wrapper {
