--- a/css/style.css
+++ b/css/style.css
@@ -337,28 +337,18 @@ a {
   z-index: 2;
 }
 
-.order-container p {
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 1;
-  margin: 0;
-
-}
-
 .order-image{
   display: block;
 }
 
 .map iframe {
-  position: relative;
-  /*top: 0;
+  position: absolute;
+  top: 0;
   left: 0;
+  z-index: 1;
+  border: none;
   width: 100%;
   height: 100%;
-  margin: 0;*/
-  z-index: 2;
-  border: none;
 }
 
 .form-image {
@@ -407,7 +397,7 @@ a {
   left: 50%;
   margin-left: -284px;
   background-color: #fff;
-  z-index: 2;
+  z-index: 3;
 }
 
 .form-show {
@@ -430,6 +420,7 @@ a {
 .order-title {
   font-weight: 700;
   padding-left: 1px;
+  padding-bottom: 2px;
 }
 
 .order-text {
