--- a/css/style.css
+++ b/css/style.css
@@ -54,9 +54,8 @@ a {
 }
 
 .header-navigation a {
-  display: block;
+  display: inline-block;
   color: #000;
-  padding: 18px 0;
 }
 
 .header-navigation a:hover {
@@ -72,10 +71,22 @@ a {
   cursor: pointer;
 }
 
+.info a {
+  cursor: pointer;
+}
+
+.info a:active,
+.info a:hover {
+  color: #8d7e75;
+}
+
 .header-navigation li {
   width: 25%;
   box-sizing: border-box;
+  padding-top: 18px;
+  padding-bottom: 18px;
 }
+
 
 .header-navigation li:nth-child(3n),
 .header-navigation li:nth-child(3n+1) {
@@ -602,7 +613,7 @@ a {
   padding-right: 101px;
   box-sizing: border-box;
   padding-top: 22px;
-  padding-left: 124px;
+  padding-left: 128px;
 }
 
 .main-footer {
@@ -810,7 +821,7 @@ a {
 }
 
 .column-3 {
-  margin-bottom: 7px;
+  margin-bottom: 9px;
 }
 
 .filter-form ul {
@@ -1128,7 +1139,8 @@ a {
   color: #ffffff;
   background-color: #81b3d2;
   padding: inherit;
-  width: 110px;
+  padding-left: 15px;
+  padding-right: 18px;
   box-sizing: border-box;
   margin-right: 7px;
   margin-left: 2px;
@@ -1156,7 +1168,8 @@ a {
   font-weight: 700;
   height: 27px;
   line-height: 27px;
-  width: 141px;
+  padding-left: 15px;
+  padding-right: 16px;
 }
 
 .catalog-item-button:hover {
