--- a/css/style.css
+++ b/css/style.css
@@ -260,7 +260,8 @@ a {
 }
 
 .reason-item-image {
-  width: 800px;
+  min-width: 800px;
+  height: auto;
 }
 
 .reason-content-item-title-white {
@@ -916,8 +917,9 @@ a {
 
 .filter-button {
   display: block;
-  width: 136px;
   height: 36px;
+  padding-left: 33px;
+  padding-right: 33px;
   line-height: 26px;
   margin-left: 85px;
   font-size: 14px;
@@ -1195,6 +1197,7 @@ a {
   margin-left: 3px;
   height: 28px;
   line-height: 28px;
-  width: 114px;
+  padding-left: 5px;
+  padding-right: 2px;
   text-align: center;
 }
