--- a/css/style.css
+++ b/css/style.css
@@ -23,11 +23,13 @@ a {
 
 .wrapper-header-shadow,
 .wrapper-footer-shadow {
-  box-shadow: 0px 8px 11px 2px #ccc;
+  -webkit-box-shadow: 0px 8px 11px 2px #ccc;
+          box-shadow: 0px 8px 11px 2px #ccc;
 }
 
 .wrapper-main-shadow {
-  box-shadow: 0px 12px 13px 2px #ccc
+  -webkit-box-shadow: 0px 12px 13px 2px #ccc;
+          box-shadow: 0px 12px 13px 2px #ccc
 }
 
 .main-navigation {
@@ -46,6 +48,16 @@ a {
 }
 
 .header-navigation {
+  display: flex;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  font-weight: 700;
+}
+
+.header-navigation {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   margin: 0;
   padding: 0;
@@ -82,7 +94,8 @@ a {
 
 .header-navigation li {
   width: 25%;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   padding-top: 18px;
   padding-bottom: 18px;
 }
@@ -111,8 +124,11 @@ a {
 }
 
 .main-navigation-wrapper .container {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-around;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
 }
 
 .main-title {
@@ -166,6 +182,8 @@ a {
 }
 
 .reason-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
@@ -235,8 +253,11 @@ a {
 }
 
 .reasons-content-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   list-style: none;
   margin: 0;
   padding: 0;
@@ -402,10 +423,13 @@ a {
   }
 }
 
+/* prefixed by https://autoprefixer.github.io (PostCSS: v7.0.26, autoprefixer: v9.7.3) */
+
 .form-container {
   width: 568px;
   padding: 55px;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   position: absolute;
   top: 0;
   left: 50%;
@@ -417,19 +441,25 @@ a {
 
 .form-show {
   display: block;
-  animation: bounce 0.6s;
+  -webkit-animation: bounce 0.6s;
+          animation: bounce 0.6s;
 }
 
 .form-error {
-  animation: shake 0.6s;
+  -webkit-animation: shake 0.6s;
+          animation: shake 0.6s;
 }
 
 .order-date {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   position: relative;
   margin-top: 0;
   margin-bottom: 25px;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .order-title {
@@ -446,7 +476,8 @@ a {
   background-color: #f2f2f2;
   outline: none;
   width: 346px;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   padding-top: 6px;
   padding-bottom: 6px;
   text-transform: uppercase;
@@ -486,7 +517,9 @@ a {
 .order-button-calendar {
   position: absolute;
   top: 50%;
-  transform: translate(0, -50%);
+  -webkit-transform: translate(0, -50%);
+      -ms-transform: translate(0, -50%);
+          transform: translate(0, -50%);
   right: 9px;
   cursor: pointer;
   border: none;
@@ -504,22 +537,32 @@ a {
 }
 
 .order-people {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
 .order-wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   width: 226px;
 }
 
 .order-wrap-child {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   width: 179px;
   margin-left: auto;
 }
 
 .order-flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   width: 114px;
   margin-left: auto;
@@ -545,7 +588,9 @@ a {
   position: absolute;
   left: 50%;
   top: 50%;
-  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
   background-color: #a9a9a9;
 }
 
@@ -560,7 +605,9 @@ a {
 }
 
 .order-button-edit-plus::after {
-  transform: translate(-50%, -50%) rotate(90deg);
+  -webkit-transform: translate(-50%, -50%) rotate(90deg);
+      -ms-transform: translate(-50%, -50%) rotate(90deg);
+          transform: translate(-50%, -50%) rotate(90deg);
 }
 
 .order-button-edit-plus:hover::after {
@@ -607,13 +654,18 @@ a {
 }
 
 .main-footer .wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   padding-bottom: 32px;
   padding-right: 101px;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   padding-top: 22px;
-  padding-left: 128px;
+  padding-left: 124px;
 }
 
 .main-footer {
@@ -646,8 +698,11 @@ a {
 }
 
 .footer-social {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   list-style: none;
   padding: 0;
   margin: 0 auto;
@@ -663,9 +718,15 @@ a {
 }
 
 .social-button {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   width: 46px;
   height: 48px;
   background-color: #81b3d2;
@@ -704,6 +765,8 @@ a {
 }
 
 .filter-columns {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   padding-left: 70px;
   padding-right: 70px;
@@ -746,8 +809,13 @@ a {
 }
 
 .filter-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   padding: 0;
 }
 
@@ -757,7 +825,6 @@ a {
   margin-right: 0px;
   padding-left: 41px;
 }
-
 
 .filter-item label {
   position: relative;
@@ -795,12 +862,14 @@ a {
 }
 
 .filter-column-1 {
-  flex-basis: 120px;
+  -ms-flex-preferred-size: 120px;
+      flex-basis: 120px;
   margin-right: 123px;
 }
 
 .filter-column-2 {
-  flex-basis: 120px;
+  -ms-flex-preferred-size: 120px;
+      flex-basis: 120px;
   margin-right: auto;
 }
 
@@ -848,7 +917,9 @@ a {
   width: 2px;
   height: 22px;
   background: #fff;
-  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
 }
 
 .filter-price label {
@@ -898,7 +969,8 @@ a {
   background: #ababab;
   border: 8px solid #fff;
   border-radius: 50%;
-  box-shadow: 0 2px 1px 0 rgba(0, 1, 1, 0.2);
+  -webkit-box-shadow: 0 2px 1px 0 rgba(0, 1, 1, 0.2);
+          box-shadow: 0 2px 1px 0 rgba(0, 1, 1, 0.2);
   cursor: pointer;
 }
 
@@ -936,8 +1008,12 @@ a {
 }
 
 .container-result {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   border-bottom: 1px solid #e5e5e5;
   padding-left: 73px;
   padding-right: 73px;
@@ -948,13 +1024,15 @@ a {
 .result-count {
   font-size: 21px;
   line-height: 21px;
-  flex-basis: 162px;
+  -ms-flex-preferred-size: 162px;
+      flex-basis: 162px;
   cursor: default;
   margin: 0px;
 }
 
 .result-sort {
-  flex-basis: 115px;
+  -ms-flex-preferred-size: 115px;
+      flex-basis: 115px;
   font-size: 12px;
   padding-top: 3px;
   padding-left: 2px;
@@ -962,9 +1040,13 @@ a {
 }
 
 .sort-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
-  flex-basis: 650px;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -ms-flex-preferred-size: 650px;
+      flex-basis: 650px;
   list-style: none;
   font-size: 12px;
   margin: 0px;
@@ -1072,8 +1154,12 @@ a {
 }
 
 .wrapper-catalog {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   padding-top: 24px;
   padding-bottom: 30px;
 }
@@ -1098,8 +1184,11 @@ a {
   width: 300px;
   margin-left: 29px;
   margin-right: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .catalog-item-title {
@@ -1140,7 +1229,8 @@ a {
   padding: inherit;
   padding-left: 15px;
   padding-right: 18px;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   margin-right: 7px;
   margin-left: 2px;
   height: 27px;
